--- a/css/main.css
+++ b/css/main.css
@@ -85,6 +85,14 @@ input {
   font-style: normal;
 }
 
+@font-face {
+  font-family: 'icomoon';
+  src: url("../../fonts/icoMoon/icomoon.eot?kc3lus");
+  src: url("../../fonts/icoMoon/icomoon.eot?kc3lus#iefix") format("embedded-opentype"), url("../../fonts/icoMoon/icomoon.ttf?kc3lus") format("truetype"), url("../../fonts/icoMoon/icomoon.woff?kc3lus") format("woff"), url("../../fonts/icoMoon/icomoon.svg?kc3lus#icomoon") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 a {
   text-decoration: none;
 }
@@ -123,6 +131,17 @@ nav {
  */
 .header {
   height: 90px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  background-color: #ffffff;
+}
+
+.header-wrap {
+  width: 1400px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -131,7 +150,6 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #ffffff;
 }
 
 .contact-phone__number {
@@ -461,12 +479,21 @@ nav {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   height: 56px;
   background-color: #ffffff;
   border: 1px solid #f0f2f7;
+}
+
+.nav-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 1400px;
 }
 
 .nav__list {
@@ -513,52 +540,89 @@ nav {
   transition: 0.3s;
 }
 
-.search-form {
+.search {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-left: 20px;
+  position: relative;
+  height: 56px;
+  width: 368px;
+  border-right: 1px solid #f0f2f7;
 }
 
-.search-form__input {
-  border: none;
-  font-size: 16px;
-  height: 56px;
+.search__input {
   width: 300px;
+  height: 54px;
+  border: none;
+  padding-left: 21px;
+  color: #142558;
+  font-size: 16px;
+}
+
+.search__input:focus {
+  outline: none;
+}
+
+.search__input:focus + .search__button {
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  color: #ea4735;
+}
+
+.search__input::-webkit-input-placeholder {
+  font-family: 'PTRootUIWebLight', sans-serif;
+  color: #a1a8bd;
+  font-size: 16px;
+}
+
+.search__input:-ms-input-placeholder {
+  font-family: 'PTRootUIWebLight', sans-serif;
+  color: #a1a8bd;
+  font-size: 16px;
+}
+
+.search__input::-ms-input-placeholder {
+  font-family: 'PTRootUIWebLight', sans-serif;
+  color: #a1a8bd;
+  font-size: 16px;
+}
+
+.search__input::placeholder {
+  font-family: 'PTRootUIWebLight', sans-serif;
+  color: #a1a8bd;
+  font-size: 16px;
+}
+
+.search__button {
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  right: 10px;
+  border: none;
+  border-radius: 100%;
+  font-family: 'icomoon' !important;
+  background-color: #fff;
   color: #142558;
 }
 
-.search-form::-webkit-input-placeholder {
-  color: #a1a8bd;
-}
-
-.search-form:-ms-input-placeholder {
-  color: #a1a8bd;
-}
-
-.search-form::-ms-input-placeholder {
-  color: #a1a8bd;
-}
-
-.search-form::placeholder {
-  color: #a1a8bd;
-}
-
-.search-form__button {
-  background-color: #fff;
-  border: none;
-  border-right: 1px solid #f0f2f7;
-  height: 56px;
-  width: 50px;
-  margin-right: 200px;
-}
-
-.search-form__button:focus {
+.search__button:focus {
   outline: none;
-  background-color: #e3e8f0;
+}
+
+.search__button:hover {
+  color: #ea4735;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.search__button:active {
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  background-color: #f0f2f7;
 }
 
 .main-content {
@@ -604,8 +668,19 @@ nav {
           justify-content: center;
 }
 
-.logo-page {
+.logo-wrap {
   width: 100%;
+  height: 236px;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.logo-page {
+  width: 1400px;
   height: 236px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -616,7 +691,6 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #ffffff;
 }
 
 .logo-page__text {
@@ -627,7 +701,7 @@ nav {
 }
 
 .logo-page__img {
-  margin-right: 200px;
+  margin-right: 120px;
 }
 
 .sort-section {
