--- a/sass/base/_fonts.scss
+++ b/sass/base/_fonts.scss
@@ -51,3 +51,15 @@
 	font-weight: normal;
 	font-style: normal;
 }
+
+
+@font-face {
+	font-family: 'icomoon';
+	src:  url('../../fonts/icoMoon/icomoon.eot?kc3lus');
+	src:  url('../../fonts/icoMoon/icomoon.eot?kc3lus#iefix') format('embedded-opentype'),
+	  url('../../fonts/icoMoon/icomoon.ttf?kc3lus') format('truetype'),
+	  url('../../fonts/icoMoon/icomoon.woff?kc3lus') format('woff'),
+	  url('../../fonts/icoMoon/icomoon.svg?kc3lus#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+   }
