--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,13 +1,21 @@
 .nav-bar{
     display: flex;
     justify-content: space-around;
-    align-items: center;
     height: 56px;
     
     background-color: #ffffff;
     border: 1px solid #f0f2f7;
-   // background-color: #f0f2f7;
+   
 }
+
+.nav-wrap{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 1400px;
+ 
+}
+
 .nav{
     &__list{
         margin-left: 50px;
@@ -43,34 +51,68 @@
     }
 }
 
-.search-form{
+.search{
     display: flex;
     align-items: center;
-    margin-left: 20px;
-    &__input{
-       border: none;
-       font-size: 16px;
-       height: 56px;
-       width: 300px;
-       color: $fillInputColor;
-    } 
-       
-       &::placeholder{
-        color: #a1a8bd;
-       }
-   
+    position: relative;
     
-    &__button{
-        background-color: #fff;
+    height: 56px;
+    width: 368px;
+    border-right: 1px solid #f0f2f7;
+    
+    &__input{
+    
+        width: 300px;
+        height: 54px;
         border: none;
-        border-right: 1px solid #f0f2f7;
-        height: 56px;
-        width: 50px;
-        margin-right: 200px;
+        padding-left: 21px;
+    
+        color: #142558;
+        font-size: 16px;
+       
         &:focus{
             outline:none;
-            background-color: $normalInputColor;
+    
+            &+.search__button{
+                transition: 0.1s;
+                color: #ea4735;
+            }
+        }
+       
+        &::placeholder{
+            @include light;
+            color: #a1a8bd;
+            font-size: 16px;
         }
     }
-}        
+    &__button{
+        cursor: pointer;
+    
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        right: 10px;
+    
+        border: none;
+        border-radius: 100%;
+    
+        @include icoMoon;
+        background-color: #fff;
+        color: #142558;
+    
+        &:focus{
+            outline: none;
+        }
+    
+        &:hover{
+            color: #ea4735;
+            transition: 0.2s;
+        }
+    
+        &:active{
+            transition: 0.1s;
+            background-color: #f0f2f7;
+        }
+    }
 
+}
