--- a/sass/pages/_chairСatalog.scss
+++ b/sass/pages/_chairСatalog.scss
@@ -21,14 +21,20 @@
         justify-content: center;
     }
 }
-
-.logo-page{
+.logo-wrap{
     width: 100%;
+    height: 236px;
+    background-color: #ffffff;
+    display: flex;
+    justify-content: space-around;
+}
+.logo-page{
+    width: 1400px;
     height: 236px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #ffffff;
+   
     &__text{
         margin-left: 115px;
         @include bold;
@@ -36,7 +42,7 @@
         font-size: 42px;
     }
     &__img{
-        margin-right: 200px;
+        margin-right: 120px;
     }
 }
 
