Сверстан элемент path на странице карточка, пока без адаптива

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -29,7 +29,8 @@
 
 // 6. Page-specific styles
 @import
-  'pages/chairСatalog';
+  'pages/chairСatalog',
+  'pages/card';
 
 // 7. Themes 
 @import
