--- a/css/main.css
+++ b/css/main.css
@@ -1151,4 +1151,43 @@ nav {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
+
+.main-content__path {
+  width: 1200px;
+  margin-top: 27px;
+}
+
+.path__main-page {
+  font-family: 'PTRootUIWebLight', sans-serif;
+  color: #828aa2;
+  font-size: 14px;
+}
+
+.path__main-page:hover {
+  color: #e93d35;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.path__nav-item {
+  font-family: 'PTRootUIWebLight', sans-serif;
+  color: #828aa2;
+  font-size: 14px;
+}
+
+.path__nav-item:hover {
+  color: #e93d35;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.path__current-page {
+  font-family: 'PTRootUIWebBold', sans-serif;
+  color: #142558;
+  font-size: 14px;
+}
+
+.path__icon {
+  margin: 0 6px -2px 6px;
+}
 /*# sourceMappingURL=main.css.map */
