--- a/css/main.css
+++ b/css/main.css
@@ -1153,8 +1153,16 @@ nav {
 }
 
 .main-content__path {
-  width: 1200px;
   margin-top: 27px;
+}
+
+.main-content__about-card {
+  margin: 26px  0 118px;
+  padding: 32px 0 96px;
+}
+
+.path {
+  width: 1200px;
 }
 
 .path__main-page {
@@ -1189,5 +1197,87 @@ nav {
 
 .path__icon {
   margin: 0 6px -2px 6px;
+}
+
+.about-card {
+  width: 1200px;
+  height: 924px;
+  border-radius: 5px;
+  background-color: #ffffff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.about-card__slider {
+  margin: 5px 32px 0 53px;
+}
+
+.about-card__card {
+  margin-left: 65px;
+  margin-right: 100px;
+}
+
+.slider {
+  min-width: 65px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.slider__icon-arrow {
+  margin-bottom: 24px;
+}
+
+.slider__img-wrap {
+  margin-top: -4px;
+  margin-bottom: 13px;
+}
+
+.img-wrap {
+  width: 65px;
+  height: 65px;
+  border-radius: 5px;
+  border: 2px solid #e3e8f000;
+}
+
+.img-wrap--active, .img-wrap:hover {
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  border: 2px solid #e3e8f0;
+  cursor: pointer;
+}
+
+.img-item {
+  width: 100%;
+  height: 100%;
+}
+
+.icon-arrow--up {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.icon-arrow:hover {
+  cursor: pointer;
+}
+
+.icon-arrow:hover > use {
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  fill: #e93d35;
+}
+
+.card-item {
+  width: 100%;
+  height: 100%;
+  background-color: red;
 }
 /*# sourceMappingURL=main.css.map */
