--- a/sass/main.scss
+++ b/sass/main.scss
@@ -31,7 +31,8 @@
 // 6. Page-specific styles
 @import
   'pages/chairСatalog',
-  'pages/card';
+  'pages/card',
+  'pages/shoppingCart';
 
 // 7. Themes 
 @import
