--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -5,7 +5,7 @@ a {
     text-decoration: none;
   }
   html,body {
-      @include light;
+      @include medium;
       background-color: #f5f8fa;
       display: flex;
       min-height: 100vh;
