Исправил пути к шрифтам

--- a/sass/pages/_chairСatalog.scss
+++ b/sass/pages/_chairСatalog.scss
@@ -313,7 +313,7 @@
 .discount{
     width: 571px;
     height: 383px;
-    background-image: url(../../img/chairСatalog/discount.png);
+    background-image: url(../img/chairСatalog/discount.png);
     background-repeat: no-repeat;
     box-shadow: inset 125px -2px 300px 86px rgba(201,214,224,1);
     
