--- a/css/main.css
+++ b/css/main.css
@@ -55,40 +55,40 @@ input {
 
 @font-face {
   font-family: 'PTRootUIWebBold';
-  src: url("../../fonts/PT Root UI_Bold/PT Root UI_Bold.eot");
-  src: url("../../fonts/PT Root UI_Bold/PT Root UI_Bold.eot?#iefix") format("embedded-opentype"), url("../../fonts/PT Root UI_Bold/PT Root UI_Bold.woff") format("woff"), url("../../fonts/PT Root UI_Bold/PT Root UI_Bold.ttf") format("truetype");
+  src: url("../fonts/PT Root UI_Bold/PT Root UI_Bold.eot");
+  src: url("../fonts/PT Root UI_Bold/PT Root UI_Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/PT Root UI_Bold/PT Root UI_Bold.woff") format("woff"), url("../fonts/PT Root UI_Bold/PT Root UI_Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PTRootUIWebLight';
-  src: url("../../fonts/PT Root UI_Light/PT Root UI_Light.eot");
-  src: url("../../fonts/PT Root UI_Light/PT Root UI_Light.eot?#iefix") format("embedded-opentype"), url("../../fonts/PT Root UI_Light/PT Root UI_Light.woff2") format("woff2"), url("../../fonts/PT Root UI_Light/PT Root UI_Light.woff") format("woff"), url("../../fonts/PT Root UI_Light/PT Root UI_Light.ttf") format("truetype");
+  src: url("../fonts/PT Root UI_Light/PT Root UI_Light.eot");
+  src: url("../fonts/PT Root UI_Light/PT Root UI_Light.eot?#iefix") format("embedded-opentype"), url("../fonts/PT Root UI_Light/PT Root UI_Light.woff2") format("woff2"), url("../fonts/PT Root UI_Light/PT Root UI_Light.woff") format("woff"), url("../fonts/PT Root UI_Light/PT Root UI_Light.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PTRootUIWebMedium';
-  src: url("../../fonts/PT Root UI_Medium/PT Root UI_Medium.eot");
-  src: url("../../fonts/PT Root UI_Medium/PT Root UI_Medium.eot?#iefix") format("embedded-opentype"), url("../../fonts/PT Root UI_Medium/PT Root UI_Medium.woff2") format("woff2"), url("../../fonts/PT Root UI_Medium/PT Root UI_Medium.woff") format("woff"), url("../../fonts/PT Root UI_Medium/PT Root UI_Medium.ttf") format("truetype");
+  src: url("../fonts/PT Root UI_Medium/PT Root UI_Medium.eot");
+  src: url("../fonts/PT Root UI_Medium/PT Root UI_Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/PT Root UI_Medium/PT Root UI_Medium.woff2") format("woff2"), url("../fonts/PT Root UI_Medium/PT Root UI_Medium.woff") format("woff"), url("../fonts/PT Root UI_Medium/PT Root UI_Medium.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'PTRootUIWebRegular';
-  src: url("../../fonts/PT Root UI_Regular/PT Root UI_Regular.eot");
-  src: url("../../fonts/PT Root UI_Regular/PT Root UI_Regular.eot?#iefix") format("embedded-opentype"), url("../../fonts/PT Root UI_Regular/PT Root UI_Regular.woff") format("woff"), url("../../fonts/PT Root UI_Regular/PT Root UI_Regular.ttf") format("truetype");
+  src: url("../fonts/PT Root UI_Regular/PT Root UI_Regular.eot");
+  src: url("../fonts/PT Root UI_Regular/PT Root UI_Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/PT Root UI_Regular/PT Root UI_Regular.woff") format("woff"), url("../fonts/PT Root UI_Regular/PT Root UI_Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'icomoon';
-  src: url("../../fonts/icoMoon/icomoon.eot?kc3lus");
-  src: url("../../fonts/icoMoon/icomoon.eot?kc3lus#iefix") format("embedded-opentype"), url("../../fonts/icoMoon/icomoon.ttf?kc3lus") format("truetype"), url("../../fonts/icoMoon/icomoon.woff?kc3lus") format("woff"), url("../../fonts/icoMoon/icomoon.svg?kc3lus#icomoon") format("svg");
+  src: url("../fonts/icoMoon/icomoon.eot?kc3lus");
+  src: url("../fonts/icoMoon/icomoon.eot?kc3lus#iefix") format("embedded-opentype"), url("../fonts/icoMoon/icomoon.ttf?kc3lus") format("truetype"), url("../fonts/icoMoon/icomoon.woff?kc3lus") format("woff"), url("../fonts/icoMoon/icomoon.svg?kc3lus#icomoon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -1027,7 +1027,7 @@ nav {
 .discount {
   width: 571px;
   height: 383px;
-  background-image: url(../../img/chairСatalog/discount.png);
+  background-image: url(../img/chairСatalog/discount.png);
   background-repeat: no-repeat;
   -webkit-box-shadow: inset 125px -2px 300px 86px #c9d6e0;
           box-shadow: inset 125px -2px 300px 86px #c9d6e0;
