--- a/sass/main.scss
+++ b/sass/main.scss
@@ -32,7 +32,8 @@
 @import
   'pages/chairСatalog',
   'pages/card',
-  'pages/shoppingCart';
+  'pages/shoppingCart',
+  'pages/checkOrderStatus';
 
 // 7. Themes 
 @import
